--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webpage Title</title>
+        <link rel = "stylesheet"
+        href = "style.css"/>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src = "script.js">    
+        </script>
     </head>
-    <body>
-        <p>test</p>
+    <body style="background-color:powderblue">
+        <h1><span class="noun", style="color: blue">Elon Musk</span> is now worth more than ExxonMobil</h1>
+        <p>New York (CNN Business) Tesla's Founder is rapidly approaching a net worth of $300 billion, as Tesla's market cap <span class="verb", style="color: green">soars</span> past $1 trillion. That's enough to <span class="verb3", style="color: green">surpass</span> one of his <span class="adj", style="color:purple">biggest</span> rivals: <span class="noun", style="color: blue">ExxonMobil.</span></p>
+        <p>As of Monday's close, <span class="noun", style="color: blue">Musk</span>'s net worth was $289 billion, according to <span class="noun", style="color: blue">Bloomberg</span>, which <span class="verb4", style="color: green">surpasses</span> the $272 billion market value of <span class="noun", style="color: blue">ExxonMobil</span>.</p>
+        <p>Speaking of rivals: <span class="noun", style="color: blue">Musk</span> is also worth more than fellow <span class="adj2", style="color:purple">famous</span> mega-billionaires <span class="noun", style="color: blue">Bill Gates</span> and <span class="noun", style="color: blue">Mark Zuckerberg combined.</span></p>
+        <p>The Tesla CEO's jump in worth can be attributed to two things after shares of Tesla rose more than 12% Monday: Hertz (HTZ) announced a record order of 100,000 Teslas for its fleet, and influential Morgan Stanley auto analyst, <span class="noun", style="color: blue">Adam Jonas</span>, recently <span class="verb2", style="color: green">raised</span> his price target on Tesla to $1,200 a share. That hefty one-day gain put Tesla (TSLA) just over the $1 trillion mark.</p>
+        <p><span class="noun", style="color: blue">Musk</span> is a leading advocate of switching drivers around the world from gas and diesel to electric vehicles, potentially endangering Exxon's long-term future. America's <span class="adj1", style="color:purple">largest</span> oil company has been sharply criticized for its climate strategy and two of its board seats went to a climate activist hedge fund.</p>
+        <p>For Tesla, by contrast, Wall Street's excitement about the future of electric vehicles has <span class="verb2", style="color: green">pushed</span> the company's <span class="adj3", style="color:purple">enormous</span> market value to more than the 11 <span class="adj1", style="color:purple">largest</span> global automakers combined. Tesla is worth more than three times as much as <span class="noun", style="color: blue"> Toyota</span>, the second most valuable automaker, which has a market cap of about $280 billion, and boasts sales and profits that dwarf those of Tesla.</p>
+        <p><span class="noun", style="color: blue">Musk</span> briefly eclipsed ExxonMobil's value once before, in early 2021. Exxon's stock is up nearly 60% this year as oil prices have climbed.</p>
+        <p>--CNN Business' <span class="noun", style="color: blue">Chris Isidore</span> contributed to this report.</p>
+        <button>Press For Fake News</button>
+        <img src="/Users/natepalumbo/Desktop/cartoons .png" width="400" height="300">
     </body>
+        
 </html>
